<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易助</string>
    <string name="action_settings">系统设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_title">易助</string>
    <string name="main_login">登录</string>
    <string name="main_login_msg">使用QQ号或微信号登录</string>
    <string name="main_regist">注册</string>
    <string name="main_regist_msg">如果你没有QQ号，可以使用手机注册</string>
    <string name="login_user_hint">QQ号/微信号/手机号</string>
    <string name="login_passwd_hint">密码</string>
    <string name="login_forget_passwd">忘记密码?</string>
    <string name="title_activity_control">易助</string>
    <string name="title_section1">求助</string>
    <string name="title_section2">信息</string>
    <string name="title_section3">通讯录</string>
    

	<string name="health_body"></string>
	<string name="security_body"></string>
	<string name="life_body"></string>

	<string name="health">健康</string>
	<string name="security">安全</string>
	<string name="life">生活</string>
	
	<string name="close1"></string>
	<string name="close2"></string>
	<string name="help1">求</string>
	<string name="help2">助</string>

</resources>
